fix(pdf): blink when switching pdf in dark mode

--- a/src/main/frontend/extensions/pdf/pdf.css
+++ b/src/main/frontend/extensions/pdf/pdf.css
@@ -399,7 +399,7 @@
 }
 
 #pdf-layout-container {
-  background-color: white;
+  background-color: transparent;
 
   &[data-theme=dark] {
     background-color: #042f3c;
